--- a/index.html
+++ b/index.html
@@ -34,7 +34,60 @@
                 </a>
             </div>
         </header>
-        
+
+        <main>
+            <section class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        Exciting tours for adventurous people
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            You're going to fall in love with nature
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing
+                            elit. Officiis totam alias quam fugiat fugit odit,
+                            quas voluptate, facilis facere sequi earum labore
+                            sint cum nisi tempore numquam atque. Velit, quasi.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            Live adventures like you never have before
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Rerum velit officiis, est quis quaerat
+                            reiciendis, debitis, temporibus possimus harum.
+                        </p>
+
+                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                        <div class="composition">
+                            <img
+                                src="img/nat-1.jpg"
+                                alt="Photo 1"
+                                class="composition__photo composition__photo--p1"
+                            />
+                            <img
+                                src="img/nat-2.jpg"
+                                alt="Photo 2"
+                                class="composition__photo composition__photo--p2"
+                            />
+                            <img
+                                src="img/nat-3.jpg"
+                                alt="Photo 3"
+                                class="composition__photo composition__photo--p3"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
         <!-- 
         <section class="grid-test">
             <div class="row">
