--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             Lorem ipsum, dolor sit amet consectetur adipisicing
                             elit. Officiis totam alias quam fugiat fugit odit,
                             quas voluptate, facilis facere sequi earum labore
-                            sint cum nisi tempore numquam atque. Velit, quasi.
+                            sint cum nisi.
                         </p>
 
                         <h3 class="heading-tertiary u-margin-bottom-small">
@@ -83,6 +83,62 @@
                                 alt="Photo 3"
                                 class="composition__photo composition__photo--p3"
                             />
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-features">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-world"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Explore the world
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit dolor sit amet consectetur.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-compass"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Meet nature
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit dolor sit amet consectetur.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-map"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Find your way
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit dolor sit amet consectetur.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-4">
+                        <div class="feature-box">
+                            <i class="feature-box__icon icon-basic-heart"></i>
+                            <h3 class="heading-tertiary u-margin-bottom-small">
+                                Live a healthier life
+                            </h3>
+                            <p class="feature-box__text">
+                                Lorem ipsum, dolor sit amet consectetur
+                                adipisicing elit dolor sit amet consectetur.
+                            </p>
                         </div>
                     </div>
                 </div>
