--- a/index.html
+++ b/index.html
@@ -49,19 +49,18 @@
                             You're going to fall in love with nature
                         </h3>
                         <p class="paragraph">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing
-                            elit. Officiis totam alias quam fugiat fugit odit,
-                            quas voluptate, facilis facere sequi earum labore
-                            sint cum nisi.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis totam
+                            alias quam fugiat fugit odit, quas voluptate, facilis facere sequi earum
+                            labore sint cum nisi.
                         </p>
 
                         <h3 class="heading-tertiary u-margin-bottom-small">
                             Live adventures like you never have before
                         </h3>
                         <p class="paragraph">
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Rerum velit officiis, est quis quaerat
-                            reiciendis, debitis, temporibus possimus harum.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum velit
+                            officiis, est quis quaerat reiciendis, debitis, temporibus possimus
+                            harum.
                         </p>
 
                         <a href="#" class="btn-text">Learn more &rarr;</a>
@@ -97,8 +96,8 @@
                                 Explore the world
                             </h3>
                             <p class="feature-box__text">
-                                Lorem ipsum, dolor sit amet consectetur
-                                adipisicing elit dolor sit amet consectetur.
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit dolor sit
+                                amet consectetur.
                             </p>
                         </div>
                     </div>
@@ -110,8 +109,8 @@
                                 Meet nature
                             </h3>
                             <p class="feature-box__text">
-                                Lorem ipsum, dolor sit amet consectetur
-                                adipisicing elit dolor sit amet consectetur.
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit dolor sit
+                                amet consectetur.
                             </p>
                         </div>
                     </div>
@@ -123,8 +122,8 @@
                                 Find your way
                             </h3>
                             <p class="feature-box__text">
-                                Lorem ipsum, dolor sit amet consectetur
-                                adipisicing elit dolor sit amet consectetur.
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit dolor sit
+                                amet consectetur.
                             </p>
                         </div>
                     </div>
@@ -136,8 +135,8 @@
                                 Live a healthier life
                             </h3>
                             <p class="feature-box__text">
-                                Lorem ipsum, dolor sit amet consectetur
-                                adipisicing elit dolor sit amet consectetur.
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit dolor sit
+                                amet consectetur.
                             </p>
                         </div>
                     </div>
@@ -155,15 +154,108 @@
                     <div class="col-1-of-3">
                         <div class="card">
                             <div class="card__side card__side--front">
-                                FRONT
+                                <div class="card__picture card__picture--1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--1">
+                                        The Sea Explorer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 day tours</li>
+                                        <li>Up to 30 people</li>
+                                        <li>2 tour guides</li>
+                                        <li>Sleep in cozy hotels</li>
+                                        <li>Difficulty: easy</li>
+                                    </ul>
+                                </div>
                             </div>
                             <div class="card__side card__side--back card__side--back-1">
-                                BACK
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$297</p>
+                                    </div>
+
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-1-of-3">Col 1 of 3</div>
-                    <div class="col-1-of-3">Col 1 of 3</div>
+
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--2">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--2">
+                                        The Forest Hiker
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>7 day tours</li>
+                                        <li>Up to 40 people</li>
+                                        <li>6 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty: medium</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-2">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$497</p>
+                                    </div>
+
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--3">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading-span card__heading-span--3">
+                                        The Snow Adventurer
+                                    </span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>5 day tours</li>
+                                        <li>Up to 15 people</li>
+                                        <li>3 tour guides</li>
+                                        <li>Sleep in provided tents</li>
+                                        <li>Difficulty: hard</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-3">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Only</p>
+                                        <p class="card__price-value">$897</p>
+                                    </div>
+
+                                    <a href="#" class="btn btn--white">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn btn--green">Discover all tours</a>
                 </div>
             </section>
         </main>
