--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
             <section class="section-stories">
                 <div class="bg-video">
                     <video class="bg-video__content" autoplay muted loop>
-                        <source src="img/video.mp4" type="video/mp4">
-                        <source src="img/video.webm" type="video/webm">
-                            Your browser is not supported!
+                        <source src="img/video.mp4" type="video/mp4" />
+                        <source src="img/video.webm" type="video/webm" />
+                        Your browser is not supported!
                     </video>
                 </div>
 
@@ -277,7 +277,7 @@
                 <div class="row">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img" />
                             <figcaption class="story__caption">Mary Smith</figcaption>
                         </figure>
                         <div class="story__text">
@@ -298,7 +298,7 @@
                 <div class="row">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img" />
                             <figcaption class="story__caption">Jack Wilson</figcaption>
                         </figure>
                         <div class="story__text">
@@ -318,6 +318,44 @@
 
                 <div class="u-center-text u-margin-top-huge">
                     <a href="#" class="btn-text">Read all stories &rarr;</a>
+                </div>
+            </section>
+
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book__form">
+                            <form action="#" class="form">
+                                <div class="u-margin-bottom-medium">
+                                    <h2 class="heading-secondary">
+                                        Start booking now
+                                    </h2>
+                                </div>
+
+                                <div class="form__group">
+                                    <input
+                                        type="text"
+                                        class="form__input"
+                                        placeholder="Full name"
+                                        id="name"
+                                        required
+                                    />
+                                    <label for="name" class="form__label">Full name</label>
+                                </div>
+
+                                <div class="form__group">
+                                    <input
+                                        type="email"
+                                        class="form__input"
+                                        placeholder="Email address"
+                                        id="email"
+                                        required
+                                    />
+                                    <label for="email" class="form__label">Email address</label>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
