Adding responsiveness to the images both in HTML & CSS

--- a/index.html
+++ b/index.html
@@ -98,11 +98,28 @@
                     <div class="col-1-of-2">
                         <div class="composition">
                             <img
-                                src="img/nat-1-large.jpg"
+                                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
                                 alt="Photo 1"
                                 class="composition__photo composition__photo--p1"
+                                src="img/nat-1-large.jpg"
                             />
                             <img
+                                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                alt="Photo 2"
+                                class="composition__photo composition__photo--p2"
+                                src="img/nat-2-large.jpg"
+                            />
+                            <img
+                                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                                sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw, 300px"
+                                alt="Photo 3"
+                                class="composition__photo composition__photo--p3"
+                                src="img/nat-3-large.jpg"
+                            />
+
+                            <!-- <img
                                 src="img/nat-2-large.jpg"
                                 alt="Photo 2"
                                 class="composition__photo composition__photo--p2"
@@ -111,7 +128,7 @@
                                 src="img/nat-3-large.jpg"
                                 alt="Photo 3"
                                 class="composition__photo composition__photo--p3"
-                            />
+                            /> -->
                         </div>
                     </div>
                 </div>
@@ -307,7 +324,13 @@
                 <div class="row">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img" />
+                            <img
+                                srcset="img/nat-8-small.jpg 1000w, img/nat-8.jpg 2000w"
+                                sizes="(max-width: 1200px) 25vw, (max-width: 900px) 30vw, (max-width: 600px) 45vw, 350px"
+                                alt="Person on a tour"
+                                src="img/nat-8.jpg"
+                                class="story__img"
+                            />
                             <figcaption class="story__caption">Mary Smith</figcaption>
                         </figure>
                         <div class="story__text">
@@ -328,7 +351,13 @@
                 <div class="row">
                     <div class="story">
                         <figure class="story__shape">
-                            <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img" />
+                            <img
+                                srcset="img/nat-9-small.jpg 1000w, img/nat-9.jpg 2000w"
+                                sizes="(max-width: 1200px) 25vw, (max-width: 900px) 30vw, (max-width: 600px) 45vw, 350px"
+                                alt="Person on a tour"
+                                src="img/nat-9.jpg"
+                                class="story__img"
+                            />
                             <figcaption class="story__caption">Jack Wilson</figcaption>
                         </figure>
                         <div class="story__text">
@@ -424,7 +453,17 @@
 
         <footer class="footer">
             <div class="footer__logo-box">
-                <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+                <picture class="footer__logo">
+                    <source
+                        srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
+                        media="(max-width: 37.5em)"
+                    />
+                    <img
+                        srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
+                        alt="Full logo"
+                        src="img/logo-green-2x.png"
+                    />
+                </picture>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
